--- a/01.ping.yaml
+++ b/01.ping.yaml
@@ -1,6 +1,6 @@
 - name: pinging the server
   host: web
-  task: ping to server
+  task: 
     - name: pinging the server
       ansible.builtin.ping:
 
