--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -7,7 +7,7 @@
         name: nginx
         state: latest
     - name: start service
-      ansible.bulltin.service:
+      ansible.builtin.service:
         name: nginx
         state: started
         enabled: yes
