--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -8,7 +8,7 @@
         state: latest 
 
     - name: service nginx
-      ansible.builtin.dnf:
+      ansible.builtin.service:
         name: nginx service
         start: started
         enabled: yes
