--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -9,7 +9,7 @@
 
     - name: service nginx
       ansible.builtin.service:
-        name: nginx service
+        name: nginx 
         state: started
       
 
