--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -3,9 +3,9 @@
   vars:
     COURSE: "Devops"
     TRAINER: "RADHAKRISHNA"
-    DURATION: "120 hrs"
+    DURATION: "120hrs"
   tasks:
     - name: printing variables
       ansible.builtin.debug:
-       "msg": "Hi, we are learning {{COURSE}} from Trainer {{TRAINER}}, Duration is {{Duration}}"
+       "msg": "Hi, we are learning {{COURSE}} from Trainer {{TRAINER}}, Duration is {{DURATION}}"
     
