--- a/05-vars_tasks.yaml
+++ b/05-vars_tasks.yaml
@@ -10,3 +10,7 @@
         COURSE: "TASK-1"
       ansible.builtin.debug:
         "msg": "Hi, we are learing {{COURSE}} from {{TRAINER}}, Duration is {{DURATION}}"
+    
+    - name: variable TASK-2
+      ansible.builtin.debug:
+        "msg": "Hi, we are learning {{COURSE}} from {{TRAINER}}, Duration is {{Duration}}
