--- a/08-vars_inventory.yaml
+++ b/08-vars_inventory.yaml
@@ -1,6 +1,6 @@
 - name: inventory variables
   hosts: localhost
   tasks:
-    - name: checking inventory variables
+    - name: checking
       ansible.builtin.debug:
         "msg": "Hi, i'm learning {{COURSE}} from trainer {{TRAINER}}, Duration is {{DURATION}}"
