--- a/08-vars_inventory.yaml
+++ b/08-vars_inventory.yaml
@@ -3,4 +3,4 @@
   tasks:
     - name: checking
       ansible.builtin.debug:
-        "msg": "Hi, i'm learning {{COURSE}} from trainer {{TRAINER}}, Duration is {{DURATION}}"
+        msg: "Hi, i'm learning {{COURSE}} from trainer {{TRAINER}}, Duration is {{DURATION}}"
