--- a/09-vars_argument.yaml
+++ b/09-vars_argument.yaml
@@ -3,4 +3,4 @@
   tasks:
     - name: checking arguments
       ansible.builtin.debug:
-        "msg": "Hello {{PERSON}}, Best of {{WISHES}}"
+        msg: "Hello {{PERSON}}, Best of {{WISHES}}"
