--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: check user exits or not
       ansible.builtin.command: id expense
-
+      ignore_errors: true
     - name: say hello
       ansible.builtin.debug:
         msg: "Hello"
