--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -4,7 +4,12 @@
   tasks:
     - name: check user exits or not
       ansible.builtin.command: id expense
+      register: USER
       ignore_errors: true
+
+    - name: print user information
+      ansible.builtin.debug:
+        msg: "user infoe: {{USER}}"
     - name: say hello
       ansible.builtin.debug:
         msg: "Hello"
