--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -10,6 +10,11 @@
     - name: print user information
       ansible.builtin.debug:
         msg: "user infoe: {{USER}}"
+
+    - name: create user
+      ansible.builtin.command: useradd expense
+      when: USER.rc !=0
+      
     - name: say hello
       ansible.builtin.debug:
         msg: "Hello"
