--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -8,5 +8,9 @@
       ignore_errors: true
 
     - name: print user information
+      ansible.builtin.debug:
+        msg: user info {{USER}}
+
+    - name: create user
       ansible.builtin.command: useradd expense
         when: USER.rc !=0
