--- a/copy-conditons.yaml
+++ b/copy-conditons.yaml
@@ -1,5 +1,6 @@
 - name: conditions
   hosts: localhost
+  become: yes
   tasks:
     - name: check user exists or not
       ansible.builtin.command: id expense
@@ -9,4 +10,4 @@
     - name: install user if not exists
       ansible.builtin.command: useradd expense
       when: USER.rc !=0 
-      
+
