--- a/copy-conditons.yaml
+++ b/copy-conditons.yaml
@@ -9,7 +9,7 @@
 
     - name: create user
       ansible.builtin.command: useradd expense
-      when: USER.rc !=0 
+      when: USER.rc !=0 #condition
 
     - name: print user details
       ansible.builtin.debug:
