--- a/copy-ngnix.yaml
+++ b/copy-ngnix.yaml
@@ -4,10 +4,12 @@
   tasks: 
     - name: install nginx
       ansible.builtin.dnf:
+        name: nginx
         state: latest
 
     - name: service 
       ansible.builtin.service:
+        name: nginx
         state: started
         enabled: yes
 
