--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -3,4 +3,4 @@
   tasks:
   - name: print default
     ansible.builtin.debug:
-      msg: "Default print is : {{course | default("Ansible")}}"
+      msg: "Default print is : {{course | default('Ansible')}}"
