--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -4,3 +4,13 @@
   - name: print default
     ansible.builtin.debug:
       msg: "Default print is : {{course | default('Ansible')}}"
+
+
+- name: upper case
+  host: localhost
+  vars:
+    course: "hello guru"
+  tasks: 
+  - name: uppercase
+    ansible.builtin.debug:
+      msg: "print upper case of hello guru is {{course | uppercase}}"
