--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -1,5 +1,13 @@
-- name: upper
-  host: localhost
+- name: print default
+  hosts: localhost
+  tasks:
+  - name: print default
+    ansible.builtin.debug:
+      msg: "Default print is : {{course | default('Ansible')}}"
+---
+
+- name: upper case
+  hosts: localhost
   vars:
     course: "hello guru"
   tasks: 
