--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -6,4 +6,4 @@
   tasks: 
   - name: uppercase
     ansible.builtin.debug:
-      msg: "print upper case of hello guru is {{course | upper}}"
+      msg: print upper case of hello guru is "{{course | upper}}"
