--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -1,8 +1,9 @@
-- name: lowercase
+- name: remove duplicates
   hosts: localhost
   vars:
-    course: HELLO GURU
-  tasks:
-  - name: convert lowercase
-    ansible.builtin.debug:
-      msg: "{{course | lower}}"
+    numbers: "[1, 1, 2, 3, 4, 5, 5]"
+  tasks: 
+    - name: removeduplicates
+      ansible.builtin.debug:
+        msg: {{numbers | unique}}
+
