--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -5,5 +5,5 @@
   tasks: 
     - name: removeduplicates
       ansible.builtin.debug:
-        msg: {{numbers | unique}}
+        msg: "{{numbers | unique}}"
 
