--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -1,7 +1,7 @@
 - name: remove duplicates
   hosts: localhost
   vars:
-    numbers: "[1, 1, 2, 3, 4, 5, 5]"
+    numbers: [1, 1, 2, 3, 4, 5, 5]
   tasks: 
     - name: removeduplicates
       ansible.builtin.debug:
