--- a/13-printdefault.yaml
+++ b/13-printdefault.yaml
@@ -1,8 +1,15 @@
-- name: print min and max
+- name: dict2items
   hosts: localhost
   vars:
-    ages: [25, 53, 58, 78, 100]
+    my_dict:
+      course: ansible
+      trainer: radhakrishna
+      duration: 120hrs
   tasks:
-  - name: print min and max
+  - name: before conversion
     ansible.builtin.debug:
-      msg: "min age is: {{ages | min}}, max age is: {{ages | max}}"
+      msg: "before conversion: {{my_dict}}"
+  
+  - name: after conversion
+    ansible.builtin.debug:
+      msg: "after conversion: {{my_dict | dict2items}}"
