--- a/dbserver.yaml
+++ b/dbserver.yaml
@@ -5,7 +5,7 @@
     
   tasks:
     - name: install mysql server
-      ansbile.builtin.dnf:
+      ansible.builtin.dnf:
         name: mysql
         state: latest
 
