--- a/dbserver.yaml
+++ b/dbserver.yaml
@@ -19,7 +19,7 @@
       ansible.builtin.pip:
         name:
         - PyMySQL
-        - cryptograph
+        - cryptography
         executable: pip3.9
 
     # check password is already setup or not
