--- a/backend-server.yaml
+++ b/backend-server.yaml
@@ -3,16 +3,16 @@
   become: yes
   tasks: 
     - name: disable nodejs
-      ansible.builtin.dnf:
-        name: nodejs
-        disabled: yes
+      ansible.builtin.command: dnf module disable nodejs -y
+        
 
-    - name: enable nodejs:20
-      ansible.builtin.dnf:
-        name: nodejs:20
-        enabled: yes
+    - name: enable nodejs:20 
+      ansible.builtin.dnf: dnf module enable nodejs:20 -y
+      
 
     - name: install nodejs
       ansible.builtin.dnf:
-        name: nodejs
+        name: nodejs 
         state: latest
+
+        
