--- a/backend-server.yaml
+++ b/backend-server.yaml
@@ -7,7 +7,7 @@
         
 
     - name: enable nodejs:20 
-      ansible.builtin.dnf: dnf module enable nodejs:20 -y
+      ansible.builtin.command: dnf module enable nodejs:20 -y
       
 
     - name: install nodejs
