--- a/backend-server.yaml
+++ b/backend-server.yaml
@@ -1,18 +1,75 @@
-- name: configure backend server
+- name: install backend server
   hosts: backend
   become: yes
-  tasks: 
-  - name: disable default nodejs
-    ansible.builtin.command: dnf module disable nodejs -y
-        
+  tasks:
 
-  - name: enable nodejs:20 
-    ansible.builtin.command: dnf module enable nodejs:20 -y
+    - name: disable nodejs
+      ansible.builtin.command: dnf module disable nodejs -y
+
+    - name: enable nodejs:20
+      ansible.builtin.command: dnf module enable nodejs:20 -y
+
+    - name: install nodejs
+      ansible.builtin.dnf:                            
+        name: nodejs
+        state: installed
+
+    - name: useradd expense
+      ansible.builtin.user:
+        name: expense
+
+    - name: crate app directory
+      ansible.builtin.file:
+        path: /app
+        state: directory
+
+    - name: download backend code
+      ansible.builtin.get_url:
+        url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+        dest: /tmp/backend.zip
+
+    - name: unzip backend code
+      ansible.builtin.unarchive:
+        src: /tmp/backend.zip
+        dest: /app
+      remote_src: yes
+
+    - name: npm install
+      ansible.builtin.command: npm install
+        args: 
+          chdir: /app
+
+    - name: copy backend service
+      ansible.builtin.copy:
+        src: backend.service
+        dest: /etc/systemd/system/backend.service
+
+    - name: install python mysql dependencies
+      ansible.builtin.pip:
+        name:
+        - PyMySQL
+        - cryptography
+        executable:pip3.9
       
+    - name: import data into mysql
+      community.mysql.mysql_db:
+        login_user: root
+        login_password: ExpenseApp@1
+        login_host: db.jeeta.online
+        target: /app/schema/backend.sql
+        state: import
+        name: all
 
-  - name: install nodejs
-    ansible.builtin.dnf:
-      name: nodejs 
-      state: installed
+        
+  
+
+
+
+
+
+    
+
+      
+    
 
         
